# envkey

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/: cli.rs  identity.rs  storage.rs
tests/: cli.rs
