[package]
name = "envkey"
version = "0.4.0-beta.1"
edition = "2024"
license = "MIT"
description = "Secrets without servers: age-encrypted secrets in a git-native file"
readme = "README.md"

[dependencies]
age = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rand = "0.9"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
